--- a/source/views/blocks/header.html
+++ b/source/views/blocks/header.html
@@ -1,3 +1,5 @@
+<!-- нужно ли в header выносить что то в include? -->
+
 <header class="header container">
     <a href="/" class="header__link header__change">
       <img src="./img/icon/Logo.svg" alt="logo" class="header__logo"></a>
