--- a/source/scss/toys.scss
+++ b/source/scss/toys.scss
@@ -6,6 +6,10 @@
 }
 
 .toys__title {
+    font-family: 'Montserrat', sant-serif;
+    font-style: normal;
+    font-weight: 700;
+    color: #1E0606;
     font-size: 40px;
     line-height: 49px;
     margin: 0;
@@ -22,12 +26,18 @@
     margin: 0 auto;
 }
 
+.filter__title {
+    visibility: hidden;
+    max-width: 0;
+    max-height: 0;
+}
+
 .filter__cost {
     display: flex;
     flex-direction: column;
 }
 
-.filter__name {
+.filter__cost__name {
     font-family: 'Open Sans', sans-serif;
     font-style: normal;
     font-weight: 700;
@@ -36,7 +46,7 @@
     color: #1E0606;
 }
 
-.cost__input {
+.filter__cost__input {
     -webkit-appearance: none;
     -moz-appearance: none;
     background-color: rgba(0, 0, 0, 0.5);
@@ -49,7 +59,7 @@
     margin-left: 7px;
 }
 
-.cost__input::-webkit-slider-thumb {
+.filter__cost__input::-webkit-slider-thumb {
     -webkit-appearance: none;
     background-color: #FFFFFF;
     cursor: pointer;
@@ -59,7 +69,7 @@
     border: 8px solid #C29974;   
 }
 
-.cost__input::-moz-range-thumb {
+.filter__cost__input::-moz-range-thumb {
     -moz-appearance: none;
     appearance: none;
     background-color: #FFFFFF;
@@ -70,28 +80,34 @@
     border: 8px solid #C29974;   
 }
 
-.cost__input::-moz-range-progress {
+.filter__cost__input::-moz-range-progress {
     background: #C29974;
 }
 
-.cost__value {
-    word-spacing: 169px;
-}
-
-.filter-text {
+.filter__cost__value {
     font-family: 'Open Sans', sans-serif;
     font-style: normal;
     font-weight: 400;
     font-size: 16px;
     line-height: 22px;
     color: #1E0606;
+    word-spacing: 166px;
 }
 
 .filter__color {
     padding-left: 94px;
 }
 
-.filter__color-list {
+.filter__color__name {
+    font-family: 'Open Sans', sans-serif;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 22px;
+    color: #1E0606;
+}
+
+.filter__color__list {
     display: flex;
     flex-direction: column;
     position: relative;
@@ -99,17 +115,23 @@
     margin-top: 15px;
 }
 
-.color__input {
+.filter__color__input {
     position: absolute;
     opacity: 0;
     margin: 0;
 }
 
-.color__label {
+.filter__color__label {
+    font-family: 'Open Sans';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 22px;
+    color: #1E0606;
     margin-left: 29px;
 }
 
-.color__label::before {
+.filter__color__label::before {
     position: absolute;
     content: "";
     background-image: url('../img/icon/square.svg');
@@ -122,7 +144,7 @@
     margin-left: -29px;
 } 
 
-.color__input:checked +.color__label::before {
+.filter__color__input:checked +.filter__color__label::before {
     background-image: url('../img/icon/square-checked.svg');
     background-repeat: no-repeat;
     background-position: center;
@@ -133,8 +155,8 @@
     background-color: #FFFFFF;
 }
 
-.color__label:hover,
-.color__label:active {
+.filter__color__label:hover,
+.filter__color__label:active {
     text-decoration-line: underline;
 }
 
@@ -142,7 +164,13 @@
     padding-left: 124px;
 }
 
-.delivery-name {
+.filter__delivery__name {
+    font-family: 'Open Sans', sans-serif;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 22px;
+    color: #1E0606;
     margin-bottom: 15px;
 }
 
@@ -154,17 +182,23 @@
     gap: 10px;
 }
 
-.delivery__input {
+.filter__delivery__input {
     position: absolute;
     opacity: 0;
     margin: 0;
 }
 
-.delivery__choise {
+.filter__delivery__choise {
+    font-family: 'Open Sans';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 22px;
+    color: #1E0606;
     margin-left: 29px;
 }
 
-.delivery__choise::before {
+.filter__delivery__choise::before {
     position: absolute;
     content: "";
     background-image: url('../img/icon/radio-input.svg');
@@ -176,22 +210,22 @@
     margin-left: -29px;
 }
 
-.delivery__input:checked +.delivery__choise::before {
+.filter__delivery__input:checked +.filter__delivery__choise::before {
     content: "";
     background-image: url('../img/icon/radio-input-cheked.svg');
     background-repeat: no-repeat;
     background-position: center;
-    width: 16px;
-    height: 16px;
+    width: 20px;
+    height: 20px;
     border: 2px solid #C29974;
     border-radius: 50%;
 }
 
-.delivery__choise:hover {
+.filter__delivery__choise:hover {
     text-decoration-line: underline;
 }
 
-.delivery__choise:active {
+.filter__delivery__choise:active {
     text-decoration-line: underline;
 }
 
@@ -200,117 +234,80 @@
     padding-right: 60px;
 }
 
-.filter__amount-list {
+.filter__amount__name {
+    font-family: 'Open Sans', sans-serif;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 22px;
+    color: #1E0606;
+}
+
+.filter__amount__list {
     display: flex;
+    justify-content: center;
     position: relative;
     margin-top: 22px;
 }
 
-.amount__input {
+.filter__amount__input {
     position: absolute;
     opacity: 0;
     margin: 0;
 }
 
-.amount__value {
+.filter__amount__value {
+    font-family: 'Open Sans';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 22px;
+    color: #1E0606;
     width: 80px;
     height: 35px;
     background-color: #FFFFFF;
     padding: 7px 19px 6px 19px;
 }
 
-.amount__input:checked +.amount__value {
-    background-color: #F3D0DB;
-    width: 80px;
-    height: 35px;
-}
-
-.amount__input:hover +.amount__value {
-    background-color: #EDDEEB;
-}
-
-.amount__value-mini {
+.filter__amount__value-mini {
     width: 80px;
     height: 35px;
     background-color: #FFFFFF;
     padding: 7px 28px 6px 28px;
 }
 
-.submit {
+.filter__amount__input:checked +.filter__amount__value {
+    background-color: #F3D0DB;
+    width: 80px;
+    height: 35px;
+}
+
+.filter__amount__input:hover +.filter__amount__value {
+    background-color: #EDDEEB;
+}
+
+.filter__submit {
     margin-top: 37px;
 }
 
 /* section toys__catalog */
 
-.toys__catalog {
+.catalog {
     margin-top: 60px;
     margin-bottom: 55px;
 }
 
-.toys__catalog-list {
+.catalog__title {
+    visibility: hidden;
+    max-width: 0;
+    max-height: 0;
+}
+
+.catalog__list {
     display: flex;
     flex-wrap: wrap;
     column-gap: 20px;
     row-gap: 20px;
     margin-bottom: 47px;
     cursor: pointer;
-}
-
-.toys__link {
-    position: relative;
-}
-
-.toys__link-item {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: absolute;
-    top: 98px;
-    left: 87px;
-    font-family: 'Montserrat', sans-serif;
-    font-style: normal;
-    font-weight: 700;
-    font-size: 26px;
-    line-height: 29px;
-    text-align: center;
-    text-transform: uppercase;
-    color: #1E0606;
-    text-shadow: 0px 0px 40px rgba(147, 3, 3, 0.25);
-    background-color: #E5EAF8;
-    width: 207px;
-    height: 207px;
-    opacity: 0;
-}
-
-.toys__link-item:hover {
-    opacity: 0.9;
-}
-
-.toys__link-item:active {
-    opacity: 0.67;
-}
-
-.toys-list-name {
-    font-family: 'Open Sans', sans-serif;
-    font-style: normal;
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 19px;
-    text-align: center;
-    color: #1E0606;
-    padding-top: 28px;
-    padding-left: 3px;
-}
-
-.toys-cost {
-    font-family: 'Open Sans', sans-serif;
-    font-style: normal;
-    font-weight: 700;
-    font-size: 16px;
-    line-height: 22px;
-    text-align: center;
-    color: #1E0606;
-    padding-top: 17px;
-    padding-bottom: 25px;
-    padding-left: 3px;
 }
