--- a/source/scss/style.scss
+++ b/source/scss/style.scss
@@ -27,11 +27,14 @@
 @import "_blocks/product-list";
 @import "_blocks/blog-list";
 @import "_blocks/toys-list";
+@import "_blocks/header-item";
+@import "svg";
 @import "contact";
 @import "catalog";
 @import "blog";
 @import "toys";
 @import "fonts";
+@import "animation";
 
 
 /*
